--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="./js/index-BnNyc-bV.js"></script>
+    <script type="module" crossorigin src="./js/index-H_WqAL-0.js"></script>
     <link rel="stylesheet" crossorigin href="./css/index-2vJv8_8L.css">
   </head>
   <body>
