--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,11 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="./js/index-Ut0h8R1V.js"></script>
-    <link rel="stylesheet" crossorigin href="./css/index-2vJv8_8L.css">
+    <script type="module" crossorigin src="js/index-H6-tK7u-.js"></script>
+    <link rel="stylesheet" crossorigin href="css/index-xughPhPt.css">
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
 
